# LearnStack_courses

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
LearnStack/: pyproject.toml  settings.py  urls.py  wsgi.py
LearnStack/LearnStack/: asgi.py  settings.py  urls.py
LearnStack/accounts/: admin.py  models.py
LearnStack/accounts/management/commands/: load_user_and_instructor.py
LearnStack/accounts/migrations/: 0001_initial.py
LearnStack/apps/accounts/: models.py  urls.py  views.py
LearnStack/apps/accounts/templates/accounts/: signup.html
LearnStack/apps/courses/: models.py
LearnStack/apps/courses/management/commands/: load_categories.py
LearnStack/apps/courses/templates/courses/: index.html
LearnStack/apps/theme/static_src/: tailwind.config.js
LearnStack/apps/theme/templates/: base.html
LearnStack/courses/: admin.py  mixins.py  models.py
LearnStack/courses/migrations/: 0001_initial.py
LearnStack/templates/: base.html
apps/accounts/: forms.py  models.py  views.py
apps/courses/: admin.py  fields.py  mixins.py  models.py  urls.py  views.py
apps/courses/api/: urls.py  views.py
apps/courses/fixtures/: courses.json  subjects.json
apps/courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_alter_content_options_alter_module_options_and_more.py  0004_alter_course_slug_alter_subject_slug.py  0005_course_students.py
apps/courses/mixins/: generate_slug.py
apps/courses/templates/: base.html
apps/students/: forms.py  urls.py  views.py
apps/theme/templates/: base.html
(+18 files in other folders)
